--- a/notebooks/BART.ipynb
+++ b/notebooks/BART.ipynb
@@ -2,86 +2,267 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "processed-terrain",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from transformers import BartForConditionalGeneration, BartTokenizer\n",
-    "model = BartForConditionalGeneration.from_pretrained(\"facebook/bart-large\")\n",
-    "tok = BartTokenizer.from_pretrained(\"facebook/bart-large\")"
+    "from transformers import BartForConditionalGeneration, BartTokenizer, BartForCausalLM\n",
+    "tok = BartTokenizer.from_pretrained(\"facebook/bart-base\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "sharing-lingerie",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_dict = tok.prepare_seq2seq_batch(\n",
+    "    [\"Hello world\", \"Python for the win\"],\n",
+    "    [\"yo man\", \"Please help us\"],\n",
+    "    return_tensors=\"pt\"\n",
+    "    \n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'input_ids': tensor([[    0,  4154,  1231, 15674,   345,  1534,   440, 50264,    11,  1854,\n",
-      "             2]]), 'attention_mask': tensor([[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]])}\n"
+      "{'input_ids': tensor([[    0, 31414,   232,     2,     1,     1],\n",
+      "        [    0, 48659,    13,     5,   339,     2]]), 'attention_mask': tensor([[1, 1, 1, 1, 0, 0],\n",
+      "        [1, 1, 1, 1, 1, 1]]), 'labels': tensor([[   0, 9839,  313,    2,    1],\n",
+      "        [   0, 6715,  244,  201,    2]])}\n"
      ]
     }
    ],
    "source": [
-    "example_english_phrase = \"UN Chief Says There Is No <mask> in Syria\"\n",
-    "batch = tok(example_english_phrase, return_tensors='pt')\n",
-    "\n",
-    "print(batch)"
+    "print(input_dict)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "military-particle",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['WBar', 'W', 'Water', 'just']\n"
+     ]
+    }
+   ],
+   "source": [
+    "logits = model(input_ids).logits\n",
+    "probs = logits[0, -1].softmax(dim=0)\n",
+    "values, predictions = probs.topk(5)\n",
+    "print(tokenizer.decode(predictions).split())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[18435, 995]\n",
+      "[0, 20920, 232, 2]\n",
+      "[0, 20920, 232, 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from transformers import AutoTokenizer\n",
+    "\n",
+    "models = ['gpt2', 'facebook/bart-base', 'allenai/longformer-large-4096']\n",
+    "\n",
+    "for model in models:\n",
+    "    tok = AutoTokenizer.from_pretrained(model)\n",
+    "    print(tok.encode(\" Hello world\", add_special_tokens=True))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of the model checkpoint at facebook/bart-base were not used when initializing BartForCausalLM: ['final_logits_bias', 'model.shared.weight', 'model.encoder.embed_tokens.weight', 'model.encoder.embed_positions.weight', 'model.encoder.layers.0.self_attn.k_proj.weight', 'model.encoder.layers.0.self_attn.k_proj.bias', 'model.encoder.layers.0.self_attn.v_proj.weight', 'model.encoder.layers.0.self_attn.v_proj.bias', 'model.encoder.layers.0.self_attn.q_proj.weight', 'model.encoder.layers.0.self_attn.q_proj.bias', 'model.encoder.layers.0.self_attn.out_proj.weight', 'model.encoder.layers.0.self_attn.out_proj.bias', 'model.encoder.layers.0.self_attn_layer_norm.weight', 'model.encoder.layers.0.self_attn_layer_norm.bias', 'model.encoder.layers.0.fc1.weight', 'model.encoder.layers.0.fc1.bias', 'model.encoder.layers.0.fc2.weight', 'model.encoder.layers.0.fc2.bias', 'model.encoder.layers.0.final_layer_norm.weight', 'model.encoder.layers.0.final_layer_norm.bias', 'model.encoder.layers.1.self_attn.k_proj.weight', 'model.encoder.layers.1.self_attn.k_proj.bias', 'model.encoder.layers.1.self_attn.v_proj.weight', 'model.encoder.layers.1.self_attn.v_proj.bias', 'model.encoder.layers.1.self_attn.q_proj.weight', 'model.encoder.layers.1.self_attn.q_proj.bias', 'model.encoder.layers.1.self_attn.out_proj.weight', 'model.encoder.layers.1.self_attn.out_proj.bias', 'model.encoder.layers.1.self_attn_layer_norm.weight', 'model.encoder.layers.1.self_attn_layer_norm.bias', 'model.encoder.layers.1.fc1.weight', 'model.encoder.layers.1.fc1.bias', 'model.encoder.layers.1.fc2.weight', 'model.encoder.layers.1.fc2.bias', 'model.encoder.layers.1.final_layer_norm.weight', 'model.encoder.layers.1.final_layer_norm.bias', 'model.encoder.layers.2.self_attn.k_proj.weight', 'model.encoder.layers.2.self_attn.k_proj.bias', 'model.encoder.layers.2.self_attn.v_proj.weight', 'model.encoder.layers.2.self_attn.v_proj.bias', 'model.encoder.layers.2.self_attn.q_proj.weight', 'model.encoder.layers.2.self_attn.q_proj.bias', 'model.encoder.layers.2.self_attn.out_proj.weight', 'model.encoder.layers.2.self_attn.out_proj.bias', 'model.encoder.layers.2.self_attn_layer_norm.weight', 'model.encoder.layers.2.self_attn_layer_norm.bias', 'model.encoder.layers.2.fc1.weight', 'model.encoder.layers.2.fc1.bias', 'model.encoder.layers.2.fc2.weight', 'model.encoder.layers.2.fc2.bias', 'model.encoder.layers.2.final_layer_norm.weight', 'model.encoder.layers.2.final_layer_norm.bias', 'model.encoder.layers.3.self_attn.k_proj.weight', 'model.encoder.layers.3.self_attn.k_proj.bias', 'model.encoder.layers.3.self_attn.v_proj.weight', 'model.encoder.layers.3.self_attn.v_proj.bias', 'model.encoder.layers.3.self_attn.q_proj.weight', 'model.encoder.layers.3.self_attn.q_proj.bias', 'model.encoder.layers.3.self_attn.out_proj.weight', 'model.encoder.layers.3.self_attn.out_proj.bias', 'model.encoder.layers.3.self_attn_layer_norm.weight', 'model.encoder.layers.3.self_attn_layer_norm.bias', 'model.encoder.layers.3.fc1.weight', 'model.encoder.layers.3.fc1.bias', 'model.encoder.layers.3.fc2.weight', 'model.encoder.layers.3.fc2.bias', 'model.encoder.layers.3.final_layer_norm.weight', 'model.encoder.layers.3.final_layer_norm.bias', 'model.encoder.layers.4.self_attn.k_proj.weight', 'model.encoder.layers.4.self_attn.k_proj.bias', 'model.encoder.layers.4.self_attn.v_proj.weight', 'model.encoder.layers.4.self_attn.v_proj.bias', 'model.encoder.layers.4.self_attn.q_proj.weight', 'model.encoder.layers.4.self_attn.q_proj.bias', 'model.encoder.layers.4.self_attn.out_proj.weight', 'model.encoder.layers.4.self_attn.out_proj.bias', 'model.encoder.layers.4.self_attn_layer_norm.weight', 'model.encoder.layers.4.self_attn_layer_norm.bias', 'model.encoder.layers.4.fc1.weight', 'model.encoder.layers.4.fc1.bias', 'model.encoder.layers.4.fc2.weight', 'model.encoder.layers.4.fc2.bias', 'model.encoder.layers.4.final_layer_norm.weight', 'model.encoder.layers.4.final_layer_norm.bias', 'model.encoder.layers.5.self_attn.k_proj.weight', 'model.encoder.layers.5.self_attn.k_proj.bias', 'model.encoder.layers.5.self_attn.v_proj.weight', 'model.encoder.layers.5.self_attn.v_proj.bias', 'model.encoder.layers.5.self_attn.q_proj.weight', 'model.encoder.layers.5.self_attn.q_proj.bias', 'model.encoder.layers.5.self_attn.out_proj.weight', 'model.encoder.layers.5.self_attn.out_proj.bias', 'model.encoder.layers.5.self_attn_layer_norm.weight', 'model.encoder.layers.5.self_attn_layer_norm.bias', 'model.encoder.layers.5.fc1.weight', 'model.encoder.layers.5.fc1.bias', 'model.encoder.layers.5.fc2.weight', 'model.encoder.layers.5.fc2.bias', 'model.encoder.layers.5.final_layer_norm.weight', 'model.encoder.layers.5.final_layer_norm.bias', 'model.encoder.layernorm_embedding.weight', 'model.encoder.layernorm_embedding.bias']\n",
+      "- This IS expected if you are initializing BartForCausalLM from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
+      "- This IS NOT expected if you are initializing BartForCausalLM from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
+      "Some weights of BartForCausalLM were not initialized from the model checkpoint at facebook/bart-base and are newly initialized: ['lm_head.weight']\n",
+      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n",
+      "Some weights of the model checkpoint at facebook/bart-base were not used when initializing BartForCausalLM: ['final_logits_bias', 'model.shared.weight', 'model.encoder.embed_tokens.weight', 'model.encoder.embed_positions.weight', 'model.encoder.layers.0.self_attn.k_proj.weight', 'model.encoder.layers.0.self_attn.k_proj.bias', 'model.encoder.layers.0.self_attn.v_proj.weight', 'model.encoder.layers.0.self_attn.v_proj.bias', 'model.encoder.layers.0.self_attn.q_proj.weight', 'model.encoder.layers.0.self_attn.q_proj.bias', 'model.encoder.layers.0.self_attn.out_proj.weight', 'model.encoder.layers.0.self_attn.out_proj.bias', 'model.encoder.layers.0.self_attn_layer_norm.weight', 'model.encoder.layers.0.self_attn_layer_norm.bias', 'model.encoder.layers.0.fc1.weight', 'model.encoder.layers.0.fc1.bias', 'model.encoder.layers.0.fc2.weight', 'model.encoder.layers.0.fc2.bias', 'model.encoder.layers.0.final_layer_norm.weight', 'model.encoder.layers.0.final_layer_norm.bias', 'model.encoder.layers.1.self_attn.k_proj.weight', 'model.encoder.layers.1.self_attn.k_proj.bias', 'model.encoder.layers.1.self_attn.v_proj.weight', 'model.encoder.layers.1.self_attn.v_proj.bias', 'model.encoder.layers.1.self_attn.q_proj.weight', 'model.encoder.layers.1.self_attn.q_proj.bias', 'model.encoder.layers.1.self_attn.out_proj.weight', 'model.encoder.layers.1.self_attn.out_proj.bias', 'model.encoder.layers.1.self_attn_layer_norm.weight', 'model.encoder.layers.1.self_attn_layer_norm.bias', 'model.encoder.layers.1.fc1.weight', 'model.encoder.layers.1.fc1.bias', 'model.encoder.layers.1.fc2.weight', 'model.encoder.layers.1.fc2.bias', 'model.encoder.layers.1.final_layer_norm.weight', 'model.encoder.layers.1.final_layer_norm.bias', 'model.encoder.layers.2.self_attn.k_proj.weight', 'model.encoder.layers.2.self_attn.k_proj.bias', 'model.encoder.layers.2.self_attn.v_proj.weight', 'model.encoder.layers.2.self_attn.v_proj.bias', 'model.encoder.layers.2.self_attn.q_proj.weight', 'model.encoder.layers.2.self_attn.q_proj.bias', 'model.encoder.layers.2.self_attn.out_proj.weight', 'model.encoder.layers.2.self_attn.out_proj.bias', 'model.encoder.layers.2.self_attn_layer_norm.weight', 'model.encoder.layers.2.self_attn_layer_norm.bias', 'model.encoder.layers.2.fc1.weight', 'model.encoder.layers.2.fc1.bias', 'model.encoder.layers.2.fc2.weight', 'model.encoder.layers.2.fc2.bias', 'model.encoder.layers.2.final_layer_norm.weight', 'model.encoder.layers.2.final_layer_norm.bias', 'model.encoder.layers.3.self_attn.k_proj.weight', 'model.encoder.layers.3.self_attn.k_proj.bias', 'model.encoder.layers.3.self_attn.v_proj.weight', 'model.encoder.layers.3.self_attn.v_proj.bias', 'model.encoder.layers.3.self_attn.q_proj.weight', 'model.encoder.layers.3.self_attn.q_proj.bias', 'model.encoder.layers.3.self_attn.out_proj.weight', 'model.encoder.layers.3.self_attn.out_proj.bias', 'model.encoder.layers.3.self_attn_layer_norm.weight', 'model.encoder.layers.3.self_attn_layer_norm.bias', 'model.encoder.layers.3.fc1.weight', 'model.encoder.layers.3.fc1.bias', 'model.encoder.layers.3.fc2.weight', 'model.encoder.layers.3.fc2.bias', 'model.encoder.layers.3.final_layer_norm.weight', 'model.encoder.layers.3.final_layer_norm.bias', 'model.encoder.layers.4.self_attn.k_proj.weight', 'model.encoder.layers.4.self_attn.k_proj.bias', 'model.encoder.layers.4.self_attn.v_proj.weight', 'model.encoder.layers.4.self_attn.v_proj.bias', 'model.encoder.layers.4.self_attn.q_proj.weight', 'model.encoder.layers.4.self_attn.q_proj.bias', 'model.encoder.layers.4.self_attn.out_proj.weight', 'model.encoder.layers.4.self_attn.out_proj.bias', 'model.encoder.layers.4.self_attn_layer_norm.weight', 'model.encoder.layers.4.self_attn_layer_norm.bias', 'model.encoder.layers.4.fc1.weight', 'model.encoder.layers.4.fc1.bias', 'model.encoder.layers.4.fc2.weight', 'model.encoder.layers.4.fc2.bias', 'model.encoder.layers.4.final_layer_norm.weight', 'model.encoder.layers.4.final_layer_norm.bias', 'model.encoder.layers.5.self_attn.k_proj.weight', 'model.encoder.layers.5.self_attn.k_proj.bias', 'model.encoder.layers.5.self_attn.v_proj.weight', 'model.encoder.layers.5.self_attn.v_proj.bias', 'model.encoder.layers.5.self_attn.q_proj.weight', 'model.encoder.layers.5.self_attn.q_proj.bias', 'model.encoder.layers.5.self_attn.out_proj.weight', 'model.encoder.layers.5.self_attn.out_proj.bias', 'model.encoder.layers.5.self_attn_layer_norm.weight', 'model.encoder.layers.5.self_attn_layer_norm.bias', 'model.encoder.layers.5.fc1.weight', 'model.encoder.layers.5.fc1.bias', 'model.encoder.layers.5.fc2.weight', 'model.encoder.layers.5.fc2.bias', 'model.encoder.layers.5.final_layer_norm.weight', 'model.encoder.layers.5.final_layer_norm.bias', 'model.encoder.layernorm_embedding.weight', 'model.encoder.layernorm_embedding.bias']\n",
+      "- This IS expected if you are initializing BartForCausalLM from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
+      "- This IS NOT expected if you are initializing BartForCausalLM from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of BartForCausalLM were not initialized from the model checkpoint at facebook/bart-base and are newly initialized: ['lm_head.weight']\n",
+      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from transformers import RobertaForCausalLM\n",
+    "\n",
+    "\n",
+    "model = BartForCausalLM.from_pretrained(\n",
+    "            'facebook/bart-base', output_hidden_states=False,\n",
+    "            gradient_checkpointing=True\n",
+    "        )\n",
+    "model = BartForCausalLM.from_pretrained('facebook/bart-base', add_cross_attention=False, is_decoder=True, is_encoder_decoder=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[    2,  4154,  2118, 14587, 14704,     2]])"
+       "BartConfig {\n",
+       "  \"_name_or_path\": \"facebook/bart-base\",\n",
+       "  \"activation_dropout\": 0.1,\n",
+       "  \"activation_function\": \"gelu\",\n",
+       "  \"add_bias_logits\": false,\n",
+       "  \"add_final_layer_norm\": false,\n",
+       "  \"architectures\": [\n",
+       "    \"BartModel\",\n",
+       "    \"BartForConditionalGeneration\",\n",
+       "    \"BartForSequenceClassification\"\n",
+       "  ],\n",
+       "  \"attention_dropout\": 0.1,\n",
+       "  \"bos_token_id\": 0,\n",
+       "  \"classif_dropout\": 0.1,\n",
+       "  \"classifier_dropout\": 0.0,\n",
+       "  \"d_model\": 768,\n",
+       "  \"decoder_attention_heads\": 12,\n",
+       "  \"decoder_ffn_dim\": 3072,\n",
+       "  \"decoder_layerdrop\": 0.0,\n",
+       "  \"decoder_layers\": 6,\n",
+       "  \"decoder_start_token_id\": 2,\n",
+       "  \"dropout\": 0.1,\n",
+       "  \"early_stopping\": true,\n",
+       "  \"encoder_attention_heads\": 12,\n",
+       "  \"encoder_ffn_dim\": 3072,\n",
+       "  \"encoder_layerdrop\": 0.0,\n",
+       "  \"encoder_layers\": 6,\n",
+       "  \"eos_token_id\": 2,\n",
+       "  \"forced_eos_token_id\": 2,\n",
+       "  \"gradient_checkpointing\": false,\n",
+       "  \"id2label\": {\n",
+       "    \"0\": \"LABEL_0\",\n",
+       "    \"1\": \"LABEL_1\",\n",
+       "    \"2\": \"LABEL_2\"\n",
+       "  },\n",
+       "  \"init_std\": 0.02,\n",
+       "  \"is_encoder_decoder\": true,\n",
+       "  \"label2id\": {\n",
+       "    \"LABEL_0\": 0,\n",
+       "    \"LABEL_1\": 1,\n",
+       "    \"LABEL_2\": 2\n",
+       "  },\n",
+       "  \"max_position_embeddings\": 1024,\n",
+       "  \"model_type\": \"bart\",\n",
+       "  \"no_repeat_ngram_size\": 3,\n",
+       "  \"normalize_before\": false,\n",
+       "  \"normalize_embedding\": true,\n",
+       "  \"num_beams\": 4,\n",
+       "  \"num_hidden_layers\": 6,\n",
+       "  \"pad_token_id\": 1,\n",
+       "  \"scale_embedding\": false,\n",
+       "  \"task_specific_params\": {\n",
+       "    \"summarization\": {\n",
+       "      \"length_penalty\": 1.0,\n",
+       "      \"max_length\": 128,\n",
+       "      \"min_length\": 12,\n",
+       "      \"num_beams\": 4\n",
+       "    },\n",
+       "    \"summarization_cnn\": {\n",
+       "      \"length_penalty\": 2.0,\n",
+       "      \"max_length\": 142,\n",
+       "      \"min_length\": 56,\n",
+       "      \"num_beams\": 4\n",
+       "    },\n",
+       "    \"summarization_xsum\": {\n",
+       "      \"length_penalty\": 1.0,\n",
+       "      \"max_length\": 62,\n",
+       "      \"min_length\": 11,\n",
+       "      \"num_beams\": 6\n",
+       "    }\n",
+       "  },\n",
+       "  \"transformers_version\": \"4.5.1\",\n",
+       "  \"use_cache\": true,\n",
+       "  \"vocab_size\": 50265\n",
+       "}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model.generate(batch['input_ids'])"
+    "model.config"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "rural-indication",
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['UNALSO SEE']\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[0, 100, 657, 127, 1437]"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "generated_ids = model.generate(batch['input_ids'])\n",
-    "print(tok.batch_decode(generated_ids, skip_special_tokens=True))"
+    "tokenized_dict = tok([\"I love my \"], padding=False, add_special_tokens=True)\n",
+    "\n",
+    "tokenized_dict['input_ids'][0][:-1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "increasing-competition",
+   "execution_count": 84,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'<s>I love my  transforming combined</s>'"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "assert tok.batch_decode(generated_ids, skip_special_tokens=True) == ['UN Chief Says There Is No Plan to Stop Chemical Weapons in Syria']"
+    "import torch\n",
+    "tokenizer.decode(model.generate(input_ids=torch.tensor([tokenized_dict['input_ids'][0][:-1]]), max_length=8)[0])"
    ]
   }
  ],
